Use minix-e2-procfs instead of kernel-module-stb-procfs

--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -16,14 +16,14 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
     minix-gst-app \
     minix-gst-amlavout \
     gst-fluendo-mpegdemux \
+    minix-e2-procfs \
+    kernel-module-e2-procfs \
     "
 
 DVBPROVIDER = "kernel"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "\
     kernel-module-cdfs \
-    kernel-module-stb-procfs \
-    kernel-module-stb-nimsockets \
     kernel-module-sysfillrect \
     kernel-module-syscopyarea \
     kernel-module-mceusb \
@@ -47,8 +47,7 @@ MACHINE_EXTRA_RRECOMMENDS += "\
 include conf/machine/include/autoload-filesystems.inc
 
 KERNEL_MODULE_AUTOLOAD += "\
-    stb-procfs \
-    stb-nimsockets \
+    e2_procfs \
     sysfillrect \
     syscopyarea \
     mceusb \
