Revert "Use minix-e2-procfs instead of kernel-module-stb-procfs"
This reverts commit 2628151d97db4d1efa559e6372363e59ffefeddc.

--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -16,14 +16,14 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
     minix-gst-app \
     minix-gst-amlavout \
     gst-fluendo-mpegdemux \
-    minix-e2-procfs \
-    kernel-module-e2-procfs \
     "
 
 DVBPROVIDER = "kernel"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "\
     kernel-module-cdfs \
+    kernel-module-stb-procfs \
+    kernel-module-stb-nimsockets \
     kernel-module-sysfillrect \
     kernel-module-syscopyarea \
     kernel-module-mceusb \
@@ -47,7 +47,8 @@ MACHINE_EXTRA_RRECOMMENDS += "\
 include conf/machine/include/autoload-filesystems.inc
 
 KERNEL_MODULE_AUTOLOAD += "\
-    e2_procfs \
+    stb-procfs \
+    stb-nimsockets \
     sysfillrect \
     syscopyarea \
     mceusb \
