--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -105,7 +105,7 @@ IMAGE_CMD_sdcard_append = "\
     rm -Rf ${IMAGEDIR}; \
     "
 
-MACHINE_FEATURES = "bluetooth fb meson8 usbhost vfat alsa dvb-c nolcd minix-pli nogamma"
+MACHINE_FEATURES = "bluetooth fb meson8 usbhost vfat alsa dvb-c nolcd nogamma"
 
 # We know about rtc
 include conf/machine/include/build-extras.inc
