Use 'require' instead of 'include' in conf/inc files as bitbake won't consider 'include' sometimes.
Maybe we need to do this for bb files as well I'm not sure.

--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -44,7 +44,7 @@ MACHINE_EXTRA_RRECOMMENDS += "\
     minix-libamcodec-${MACHINE} \
     "
 
-include conf/machine/include/autoload-filesystems.inc
+require conf/machine/include/autoload-filesystems.inc
 
 KERNEL_MODULE_AUTOLOAD += "\
     stb-procfs \
@@ -65,7 +65,7 @@ KERNEL_MODULE_AUTOLOAD += "\
 # this breaks some binary libraries and 3D (neither of which ship with
 # meta-yocto). For maximum compatibility, leave this disabled.
 DEFAULTTUNE ?= "cortexa9hf-neon"
-include conf/machine/include/tune-cortexa9.inc
+require conf/machine/include/tune-cortexa9.inc
 
 IMAGE_FSTYPES += "sdcard"
 IMAGE_ROOTFS_SIZE = "976562"
@@ -109,4 +109,4 @@ IMAGE_CMD_sdcard_append = "\
 MACHINE_FEATURES = "bluetooth fb meson8 usbhost vfat alsa dvb-c nolcd nogamma nofhdskin"
 
 # We know about rtc
-include conf/machine/include/build-extras.inc
+require conf/machine/include/build-extras.inc
