--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -71,7 +71,7 @@ IMAGE_FSTYPES += "sdcard"
 IMAGE_ROOTFS_SIZE = "976562"
 IMAGE_EXTRA_SPACE = "0"
 IMAGE_OVERHEAD_FACTOR = "1.0"
-
+x8hp.conf
 # Serial console to be used
 SERIAL_CONSOLE = "115200 ttyS0"
 
@@ -101,7 +101,6 @@ IMAGE_CMD_sdcard_append = "\
     cd ${DEPLOY_DIR_IMAGE}; \
     zip ${IMAGE_NAME}_sdcard.zip ${IMAGEDIR}/*; \
     rm -f ${DEPLOY_DIR_IMAGE}/*.ext4; \
-    rm -f ${DEPLOY_DIR_IMAGE}/*.manifest; \
     rm -f ${DEPLOY_DIR_IMAGE}/*.img; \
     rm -Rf ${IMAGEDIR}; \
     "
