Get rid of extra inc files and add + to not corrupt default OE variables.

--- a/conf/machine/x8hp.conf
+++ b/conf/machine/x8hp.conf
@@ -44,7 +44,7 @@ MACHINE_EXTRA_RRECOMMENDS += "\
     minix-libamcodec-${MACHINE} \
     "
 
-require conf/machine/include/autoload-filesystems.inc
+KERNEL_MODULE_AUTOLOAD += "xfs"
 
 KERNEL_MODULE_AUTOLOAD += "\
     stb-procfs \
@@ -108,4 +108,4 @@ IMAGE_CMD_sdcard_append = "\
 MACHINE_FEATURES = "bluetooth fb meson8 usbhost vfat alsa dvb-c nolcd nogamma nofhdskin"
 
 # We know about rtc
-require conf/machine/include/build-extras.inc
+MACHINE_FEATURES_BACKFILL_CONSIDERED += "rtc"
